--- a/pharmacies.html
+++ b/pharmacies.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -13,81 +12,34 @@
   <link rel="stylesheet" href="pharmacies.css">
 </head>
 <body>
-
   <div class="container">
-
     <header class="header">
       <a href="index.html" class="back-btn">⬅ الرجوع</a>
       <h1>صيدليات الحراسة</h1>
     </header>
 
     <main>
-
-      <!-- ملاحظة صغيرة -->
       <section class="card note">
-        <p>اختر صيدلية واتصل مباشرة. (مثال تجريبي)</p>
+        <p>اختار المدينة باش نعرضو ليك صيدليات الحراسة ديال اليوم.</p>
       </section>
 
-      <!-- صيدلية 1 -->
-      <section class="card pharmacy-card">
-        <div class="top">
-          <div class="info">
-            <h2>صيدلية المركز</h2>
-            <p class="meta">الرباط • 1.2 كم</p>
-          </div>
-
-          <img src="images/pharmacie.png" alt="صيدلية" class="card-logo">
-        </div>
-
-        <div class="details">
-          <p><strong>العنوان:</strong> شارع محمد الخامس</p>
-          <p><strong>الوقت:</strong> مفتوحة الآن (حراسة)</p>
-        </div>
-
-        <a class="call-btn" href="tel:+212600000000">اتصال</a>
+      <!-- اختيار المدينة (بدون GPS) -->
+      <section class="card city-selector">
+        <button class="city-btn active" data-city="rabat">الرباط</button>
+        <button class="city-btn" data-city="sale">سلا</button>
+        <button class="city-btn" data-city="temara">تمارة</button>
       </section>
 
-      <!-- صيدلية 2 -->
-      <section class="card pharmacy-card">
-        <div class="top">
-          <div class="info">
-            <h2>صيدلية حي السلام</h2>
-            <p class="meta">سلا • 2.6 كم</p>
-          </div>
-
-          <img src="images/pharmacie.png" alt="صيدلية" class="card-logo">
-        </div>
-
-        <div class="details">
-          <p><strong>العنوان:</strong> حي السلام، قرب المحطة</p>
-          <p><strong>الوقت:</strong> حراسة ليلية</p>
-        </div>
-
-        <a class="call-btn" href="tel:+212611111111">اتصال</a>
+      <!-- Status -->
+      <section class="card note" id="phStatusCard">
+        <p id="phStatus">جاري التحميل...</p>
       </section>
 
-      <!-- صيدلية 3 -->
-      <section class="card pharmacy-card">
-        <div class="top">
-          <div class="info">
-            <h2>صيدلية النهضة</h2>
-            <p class="meta">التمارة • 4.1 كم</p>
-          </div>
-
-          <img src="images/pharmacie.png" alt="صيدلية" class="card-logo">
-        </div>
-
-        <div class="details">
-          <p><strong>العنوان:</strong> شارع الحسن الثاني</p>
-          <p><strong>الوقت:</strong> حراسة نهارية</p>
-        </div>
-
-        <a class="call-btn" href="tel:+212622222222">اتصال</a>
-      </section>
-
+      <!-- List -->
+      <div id="phList"></div>
     </main>
-
   </div>
 
+  <script src="pharmacies.js"></script>
 </body>
 </html>
